--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+    
     <script src="index.js"></script>
 
 </head>
@@ -15,60 +16,60 @@
     <section class="mainContainer">
         <sidebar class="sidebar sideFlex">
             <div class="logoTitle sideFlexRow">
-                <img class="companyLogo" src="/icons/xcircle.svg" alt="company-logo">
+                <img class="companyLogo" src="icons/xcircle.svg" alt="company-logo">
                 <h1 class="dashboard">Dashboard</h1>
             </div>
             <div class="mainLinkContainer sideFlexColumn">
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/home.svg" alt="Home icon">
+                    <img class="linkIcons" src="icons/home.svg" alt="Home icon">
                     <h3 class="mainLinks">Home</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/profileLinkImage.svg" alt="Profile icon">
+                    <img class="linkIcons" src="icons/profileLinkImage.svg" alt="Profile icon">
                     <h3 class="mainLinks">Profile</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/message.svg" alt="Messages icon">
+                    <img class="linkIcons" src="icons/message.svg" alt="Messages icon">
                     <h3 class="mainLinks">Messages</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/history.svg" alt="history icon">
+                    <img class="linkIcons" src="icons/history.svg" alt="history icon">
                     <h3 class="mainLinks">History</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/file-document-multiple.svg" alt="tasks icon">
+                    <img class="linkIcons" src="icons/file-document-multiple.svg" alt="tasks icon">
                     <h3 class="mainLinks">Tasks</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/account-group.svg" alt="community icon">
+                    <img class="linkIcons" src="icons/account-group.svg" alt="community icon">
                     <h3 class="mainLinks">Communities</h3>
                 </div>
             </div>
             <div class="supportLinks sideFlex">
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/cog.svg" alt="Settings icon">
+                    <img class="linkIcons" src="icons/cog.svg" alt="Settings icon">
                     <h3 class="mainLinks">Settings</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/help-rhombus.svg" alt="Support icon">
+                    <img class="linkIcons" src="icons/help-rhombus.svg" alt="Support icon">
                     <h3 class="mainLinks">Support</h3>
                 </div>
                 <div class="sideFlexRow">
-                    <img class="linkIcons" src="/icons/shield-check.svg" alt="Privacy icon">
+                    <img class="linkIcons" src="icons/shield-check.svg" alt="Privacy icon">
                     <h3 class="mainLinks">Privacy</h3>
                 </div>
             </div>
         </sidebar>
         <header class="header">
             <div class="hcontainer1">
-                <img class="linkIcons" id="searchIcon" src="/icons/magnify.svg" alt="search icon">
+                <img class="linkIcons" id="searchIcon" src="icons/magnify.svg" alt="search icon">
                 <input type="text" name="search_bar" id="searchBar">
-                <img class="linkIcons" src="/icons/bell-ring-outline.svg" alt="bell icon" id="bellIcon">
-                <img class="profileIcon1" src="/images/profilePic.png" alt="profile icon" id="smallPro">
+                <img class="linkIcons" src="icons/bell-ring-outline.svg" alt="bell icon" id="bellIcon">
+                <img class="profileIcon1" src="images/profilePic.png" alt="profile icon" id="smallPro">
                 <h3 id="profileName1">Morgan Oakley</h3>
             </div>
             <div class="hcontainer2">
-                <img class="profileIcon2" src="/images/profilePic.png" alt="profile icon">
+                <img class="profileIcon2" src="images/profilePic.png" alt="profile icon">
                 <div id="hiProName">
                     <p id="hiThere">Hi there,</p>
                     <h2 id="profileName2">Morgan Oakley (@morgan)</h2>
@@ -94,9 +95,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                     <div class="mainCards">
@@ -105,9 +106,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                     <div class="mainCards">
@@ -116,9 +117,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                     <div class="mainCards">
@@ -127,9 +128,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                     <div class="mainCards">
@@ -138,9 +139,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                     <div class="mainCards">
@@ -149,9 +150,9 @@
                             <p class="cardSummary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                         <div class="iconDiv">
-                            <a  href="#"><img class="linkIcons" src="/icons/star-plus-outline.svg" alt="favorite-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/eye-plus-outline.svg" alt="watch-project"></a>
-                            <a  href="#"><img class="linkIcons" src="/icons/share-variant-outline.svg" alt="share-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/star-plus-outline.svg" alt="favorite-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/eye-plus-outline.svg" alt="watch-project"></a>
+                            <a  href="#"><img class="linkIcons" src="icons/share-variant-outline.svg" alt="share-project"></a>
                         </div>
                     </div>
                 </div>
@@ -168,28 +169,28 @@
                     <div class="trendingHeader"><h3 id="trending">Trending</h3></div>
                     <div class="sideCards">
                         <div class="trendingRows">
-                            <img class="profileIcon3" src="/images/greenGuyPic.png" alt="trending-user-profile">
+                            <img class="profileIcon3" src="images/greenGuyPic.png" alt="trending-user-profile">
                             <div class="trendingNameSloganContainer">
                                 <p class="noMargin atName">@legan</p>
                                 <p class="noMargin">The Dope Track</p>
                             </div>
                         </div>
                         <div class="trendingRows">
-                            <img class="profileIcon3" src="/images/profilePic.png" alt="trending-user-profile">
+                            <img class="profileIcon3" src="images/profilePic.png" alt="trending-user-profile">
                             <div class="trendingNameSloganContainer">
                                 <p class="noMargin atName">@Morgan</p>
                                 <p class="noMargin">Doom Fist Project</p>
                             </div>
                         </div>
                         <div class="trendingRows">
-                            <img class="profileIcon3" src="/images/girlRedPic.png" alt="trending-user-profile">
+                            <img class="profileIcon3" src="images/girlRedPic.png" alt="trending-user-profile">
                             <div class="trendingNameSloganContainer">
                                 <p class="noMargin atName">@kendall</p>
                                 <p class="noMargin">Horizon App</p>
                             </div>
                         </div>
                         <div class="trendingRows">
-                            <img class="profileIcon3" src="/images/girlBlueDress.png" alt="trending-user-profile">
+                            <img class="profileIcon3" src="images/girlBlueDress.png" alt="trending-user-profile">
                             <div class="trendingNameSloganContainer">
                                 <p class="noMargin atName">@alex</p>
                                 <p class="noMargin">Ring App Project</p>
